envio de correos desde la creacion de la cohorte listo

--- a/ProyectoDesarrollo/nbproject/project.properties
+++ b/ProyectoDesarrollo/nbproject/project.properties
@@ -42,6 +42,9 @@ file.reference.jasperreports-4.7.1.jar=lib/Libary_JasperReports/jasperreports-4.
 file.reference.jasperreports-applet-4.7.1.jar=lib/Libary_JasperReports/jasperreports-applet-4.7.1.jar
 file.reference.jasperreports-fonts-4.7.1.jar=lib/Libary_JasperReports/jasperreports-fonts-4.7.1.jar
 file.reference.jasperreports-javaflow-4.7.1.jar=lib/Libary_JasperReports/jasperreports-javaflow-4.7.1.jar
+file.reference.java-mail-1.4.4.jar.zip=lib/java-mail-1.4.4.jar.zip
+file.reference.javax.mail-1.5.3.jar=lib/javax.mail-1.5.3.jar
+file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.jcommon-1.0.15.jar=lib/Libary_JasperReports/jcommon-1.0.15.jar
 file.reference.jfreechart-1.0.12.jar=lib/Libary_JasperReports/jfreechart-1.0.12.jar
@@ -66,7 +69,10 @@ javac.classpath=\
     ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.postgresql-9.0-801.jdbc3.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.java-mail-1.4.4.jar.zip}:\
+    ${file.reference.javax.mail-1.5.3.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
